# uart-over-wifi

./: .gitignore  README.md  flash.sh  pyproject.toml  server.sh
tests/: test_uart_over_wifi.py
uart_over_wifi/: client.py  server.py
